--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >
   Documenting my journey into homelabs, automation, and self-hosting.
 
 baseurl: ""
-url: "https://blog.johnsonfamilyhub.com"
+url: "/blog"
 
 remote_theme: "mmistakes/minimal-mistakes"
 
